# CrownFlame-2D-Game-Engine

./: .clangd  .gitignore  CMakeLists.txt  CrownFlame-2D-Game-Engine.cpp  CrownFlame-2D-Game-Engine.h  README.md  build_and_run.bat  build_and_run.ps1  compile_flags.txt  imgui.ini
examples/: AssetManagerExample.cpp
include/: Application.h  AssetManager.h  AudioManager.h  DatabaseManager.h  Enemy.h  FPSCounter.h  FileBrowser.h  FileWatcher.h  GameObject.h  GameState.h  GameWorld.h  HotReloadManager.h  InputManager.h  Pathfinder.h  Scene.h  SceneData.h  SceneManager.h  SceneTemplates.h  SceneValidator.h  Settings.h  Tile.h  TileMap.h  TileMapManager.h  Tileset.h  UIManager.h  openglErrorReporting.h
include/game/: game.h
include/platform/: debugger.h  input.h  tools.h
resources/: GameSave.data
resources/scenes/: level1.scene  level2.scene  new_test_scene.scene  sandbox.scene
src/: Application.cpp  AssetManager.cpp  AudioManager.cpp  DatabaseManager.cpp  Enemy.cpp  FPSCounter.cpp  FileBrowser.cpp  FileWatcher.cpp  GameObject.cpp  GameState.cpp  GameWorld.cpp  HotReloadManager.cpp  InputManager.cpp  Pathfinder.cpp  Scene.cpp  SceneExample.cpp  SceneManager.cpp  SceneTemplates.cpp  SceneValidator.cpp  Settings.cpp  Tile.cpp  TileMap.cpp  TileMapManager.cpp  Tileset.cpp  UIManager.cpp  main.cpp  openglErrorReporting.cpp
src/game/: game.cpp
src/platform/: CrownFlameGLFWMain.cpp  debugger.cpp  input.cpp  miscellaneousFunctions.cpp
